--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -16,7 +16,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="full">CREATE</ion-button>
+        <ion-button [routerLink]="['/create']" expand="full">CREATE</ion-button>
       </ion-col>
       <ion-col>
         <ion-button expand="full">LVL UP</ion-button>
