Home Button Enter Name

--- a/src/app/home/tab1.page.html
+++ b/src/app/home/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Amy Test 1
+      QuestMyLife
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,14 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Quest my Life of</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-button (click)="btnClicked()" color=secondary fill="solid" strong="">
+    Enter Name
+  </ion-button>
+
+
 </ion-content>
