--- a/src/app/home/tab1.page.html
+++ b/src/app/home/tab1.page.html
@@ -9,14 +9,38 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Quest my Life of</ion-title>
+      <ion-title size="medium">Quest my Life of {{this.showName}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-  <ion-button (click)="btnClicked()" color=secondary fill="solid" strong="">
-    Enter Name
-  </ion-button>
+  <ion-item *ngIf="showItem === true">
+    <ion-label>Name: </ion-label>
+    <ion-input [(ngModel)]="name" placeholder="Enter Input"></ion-input>
+    <ion-button (click)="btnClicked()" color=secondary fill="solid" strong="">
+      Enter Name
+    </ion-button>
+  </ion-item>
 
+  <ion-list>
+    <ion-label style="margin-left: 5%; font-size: 24px;" position="fixed" color="primary">Your Stats</ion-label>
+    <ion-item>
+      <ion-label>Strengh</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Wisdom</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Intelligence</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Charme</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Health</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Social</ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
