--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -28,21 +28,24 @@
   </ion-grid>
 
   <ion-list>
-    <ion-label style="margin-left: 5%; font-size: 24px;" position="fixed" color="primary">Your tasks in progress</ion-label>
-    <ion-item>
-      <ion-label>Pokémon Yellow</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Mega Man X</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>The Legend of Zelda</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Pac-Man</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Super Mario World</ion-label>
+    <!-- <ion-label style="margin-left: 5%; font-size: 24px;" position="fixed" color="primary">Your tasks in progress</ion-label> -->
+    <ion-item *ngFor="let task of this.tasks" class="task">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-label>Task: {{task}}</ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-label>
+              EXP: <ion-progress-bar color="tertiary" value="0.5"></ion-progress-bar>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-item>
   </ion-list>
+
+
 </ion-content>
