added new icons and ion select on  create new quests

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Create Tasks
+      Create new Quest
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Create Tasks</ion-title>
+      <ion-title size="large">Create new Quest</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -21,5 +21,14 @@
       <ion-label>XP LVL: </ion-label>
       <ion-range color="danger" pin="true"></ion-range>
     </ion-item>
-  <ion-button [routerLink]="['/tabs/tab2']" (click)="addTask();" expand="full">Add Task</ion-button>
+
+    <ion-item>
+      <ion-label>Category</ion-label>
+      <ion-select placeholder="Select One">
+        <ion-select-option value="sport"> Sport </ion-select-option>
+        <ion-select-option value="gaming">Gaming</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-button [routerLink]="['/tabs/tab2']" (click)="addTask();" expand="full">Add Task</ion-button>
 </ion-content>
