--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,8 +7,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="game-controller-outline"></ion-icon>
+      <ion-label>Quests</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
